--- a/templates/emails/includes/base/empty_two_col_row.html
+++ b/templates/emails/includes/base/empty_two_col_row.html
@@ -18,8 +18,8 @@
                       <table border="0" cellpadding="30" cellspacing="0" width="100%" style="max-width:100%;">
                         <tr>
                           <td align="left" class="textContent">
-                            {% block leftCol%}
-dfsdgdsgsdgsdg <br> gzgerdsgqgdsqv <br> rgergeg
+                            {% block leftcontent%}
+
                             {% endblock %}
                           </td>
                         </tr>
@@ -29,8 +29,8 @@ dfsdgdsgsdgsdg <br> gzgerdsgqgdsqv <br> rgergeg
                       <table class="flexibleContainerBoxNext" border="0" cellpadding="30" cellspacing="0" width="100%" style="max-width:100%;">
                         <tr>
                           <td align="left" class="textContent">
-                            {% block rightCol %}
-sgsdgsdgdsgdsgdsgs <br> qfdgdsgfdgfdsg <br> cscdsgfvzeg
+                            {% block rightcontent%}
+
                             {% endblock %}
                           </td>
                         </tr>
