--- a/templates/emails/includes/base/text_row_with_title.html
+++ b/templates/emails/includes/base/text_row_with_title.html
@@ -1,9 +1,9 @@
-{% with textcolor=textcolor|default:"#5F5F5F" bgcolor=bgcolor|default:"#F8F8F8" title=title|default:"" text=text|default:""%}
+{% with textcolor=textcolor|default:"#5F5F5F" bgcolor=bgcolor|default:"#FFFFFF" title=title|default:"" text=text|default:""%}
 
 <tr>
   <td align="center" valign="top">
     <!-- CENTERING TABLE // -->
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#F8F8F8">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="{{bgcolor}}">
       <tr>
         <td align="center" valign="top">
           <!-- FLEXIBLE CONTAINER // -->
