--- a/meeting/templates/pilot_profile.html
+++ b/meeting/templates/pilot_profile.html
@@ -32,6 +32,10 @@
           <th scope="row">{% trans 'Insurance Number'%}</th>
           <td>{{pilot.insurance_number}}</td>
         </tr>
+        <tr>
+          <th scope="row">{% trans 'Phone Number'%}</th>
+          <td>{{pilot.phone_number}}</td>
+        </tr>
       </tbody>
     </table>
     <a href= "{% url 'change_password'%}" class="btn btn-primary">{% trans "Change Password" %}</a>
