--- a/templates/emails/base_email.html
+++ b/templates/emails/base_email.html
@@ -49,8 +49,9 @@
               <!-- // END EMAIL BODY -->
 
               <!-- FOOTER ROW // -->
+              {% block footer%}
               {% include 'includes/base/footer_row.html'%}
-
+              {% endblock %}
             </td>
           </tr>
         </table>
