--- a/templates/emails/reservation_confirmation_request.html
+++ b/templates/emails/reservation_confirmation_request.html
@@ -1,6 +1,6 @@
 {% extends "emails/base_email.html"%}
 {% load i18n %}
-
+<!-- TODO: a completer  -->
 
 {% block content %}
 {% include 'emails/includes/base/text_row_with_title.html' with text="text text text"%}
