--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% load static %}{% load i18n %}{% load widget_tweaks %}
+{% load static %}{% load i18n %}{% load widget_tweaks %}{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -35,81 +35,8 @@
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">{% trans "Create an Account!" %}</h1>
               </div>
-              <form class="user" action="{% url 'signup' %}" method="post">
-                {% csrf_token %}
-
-                <div class="form-group">
-                  <input type="text"
-                   name="{{ form.username.name }}"
-                   id="{{ form.username.id_for_label }}"
-                   {% if form.username.value != None %}value="{{ form.username.value|stringformat:'s' }}"{% endif %}
-                   maxlength="{{ form.username.field.max_length }}"
-                   {% if form.username.field.required %}required{% endif %}
-                   class="form-control form-control-user"
-                   placeholder="{%trans "Username" %}"/>
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="text"
-                     name="{{ form.first_name.name }}"
-                     id="{{ form.first_name.id_for_label }}"
-                     {% if form.first_name.value != None %}value="{{ form.first_name.value|stringformat:'s' }}"{% endif %}
-                     maxlength="{{ form.first_name.field.max_length }}"
-                     {% if form.first_name.field.required %}required{% endif %}
-                     class="form-control form-control-user"
-                     placeholder="{%trans "First Name" %}"/>
-                    <!-- <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name"> -->
-                  </div>
-                  <div class="col-sm-6">
-                    <input type="text"
-                     name="{{ form.last_name.name }}"
-                     id="{{ form.last_name.id_for_label }}"
-                     {% if form.last_name.value != None %}value="{{ form.last_name.value|stringformat:'s' }}"{% endif %}
-                     maxlength="{{ form.last_name.field.max_length }}"
-                     {% if form.last_name.field.required %}required{% endif %}
-                     class="form-control form-control-user"
-                     placeholder="{%trans "Last Name" %}"/>
-                    <!-- <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name"> -->
-                  </div>
-                </div>
-                <div class="form-group">
-                  <input type="email"
-                   name="{{ form.email.name }}"
-                   id="{{ form.email.id_for_label }}"
-                   {% if form.email.value != None %}value="{{ form.email.value|stringformat:'s' }}"{% endif %}
-                   maxlength="{{ form.email.field.max_length }}"
-                   {% if form.email.field.required %}required{% endif %}
-                   class="form-control form-control-user"
-                   placeholder="{%trans "Email Address" %}"/>
-                  <!-- <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Address"> -->
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="password"
-                     name="{{ form.password1.name }}"
-                     id="{{ form.password1.id_for_label }}"
-                     {% if form.password1.value != None %}value="{{ form.password1.value|stringformat:'s' }}"{% endif %}
-                     maxlength="{{ form.password1.field.max_length }}"
-                     {% if form.password1.field.required %}required{% endif %}
-                     class="form-control form-control-user"
-                     placeholder="{%trans "Password" %}"/>
-                    <!-- <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password"> -->
-                  </div>
-                  <div class="col-sm-6">
-                    <input type="password"
-                     name="{{ form.password2.name }}"
-                     id="{{ form.password2.id_for_label }}"
-                     {% if form.password2.value != None %}value="{{ form.password2.value|stringformat:'s' }}"{% endif %}
-                     maxlength="{{ form.password2.field.max_length }}"
-                     {% if form.password2.field.required %}required{% endif %}
-                     class="form-control form-control-user"
-                     placeholder="{%trans "Repeat Password" %}"/>
-                    <!-- <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password"> -->
-                  </div>
-                </div>
-                <input type="submit" class="btn btn-primary btn-user btn-block" value="{% trans 'Register Account' %}"></input>
-
-              </form>
+                {% crispy form %}
+              
               <hr>
               <div class="text-center">
                 <a class="small" href="{% url 'password_reset' %}">{% trans "Forgot Password?" %}</a>
