--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -40,8 +40,8 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">{% trans "Welcome Back!" %}</h1>
                   </div>
-
-                    <div class="class="alert alert-danger" role="alert">
+                  {% if form.errors or next %}
+                    <div class="alert alert-danger" role="alert">
                       <ul>
                       {% if form.errors %}
                       <li>
@@ -60,8 +60,7 @@
                       {% endif %}
                   </ul>
                 </div>
-
-
+                {% endif %}
                   <form method="post" class="user" action="{% url 'login' %}">
                     {% csrf_token %}
                     <div class="form-group">
@@ -84,14 +83,7 @@
                        {% if form.password.field.required %}required{% endif %}
                        class="form-control form-control-user"
                        placeholder="{%trans "Password" %}"/>
-                      <!-- <input type="password" class="form-control form-control-user" id="exampleInputPassword" > -->
                     </div>
-                    <!-- <div class="form-group">
-                      <div class="custom-control custom-checkbox small">
-                        <input type="checkbox" class="custom-control-input" id="customCheck">
-                        <label class="custom-control-label" for="customCheck">Remember Me</label>
-                      </div>
-                    </div> -->
                     <input type="submit" class="btn btn-primary btn-user btn-block" value="{% trans 'Login' %}"></input>
                   </form>
                   <hr>
