--- a/templates/base/base_logged.html
+++ b/templates/base/base_logged.html
@@ -46,6 +46,9 @@
         <!-- Begin Page Content -->
         <div class="container-fluid">
 
+          {% block messages %}
+
+          {% endblock%}
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">{% block page_title %}{% endblock %}</h1>
 
