--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -36,7 +36,7 @@
   <tr>
   {% endif %}
     <td>{{res.reservation_number}}</td>
-    <td>{{res.ulm.pilot}}</td>
+    <td>{{res.pilot}}</td>
     <td>{{res.ulm.imatriculation}}</td>
     <td>{{res.ulm.radio_id}}</td>
     <td>{{res.fuel_reservation}}</td>
