--- a/meeting/templates/includes/filters/reservations_filter.html
+++ b/meeting/templates/includes/filters/reservations_filter.html
@@ -8,12 +8,12 @@
         {% render_field filter.form.reservation_number class="form-control" %}
     </div>
     <div class="form-group col-sm">
-        {{ filter.form.ulm__pilot__user__first_name.label_tag }}
-        {% render_field filter.form.ulm__pilot__user__first_name class="form-control" %}
+        {{ filter.form.pilot__user__first_name.label_tag }}
+        {% render_field filter.form.pilot__user__first_name class="form-control" %}
     </div>
     <div class="form-group col-sm">
-        {{ filter.form.ulm__pilot__user__last_name.label_tag }}
-        {% render_field filter.form.ulm__pilot__user__last_name class="form-control" %}
+        {{ filter.form.pilot__user__last_name.label_tag }}
+        {% render_field filter.form.pilot__user__last_name class="form-control" %}
     </div>
   </div>
   <div class="row">
