--- a/meeting/templates/pilot_reservation_list.html
+++ b/meeting/templates/pilot_reservation_list.html
@@ -2,19 +2,20 @@
 {% load i18n %}
 
 {% block messages %}
-{% if meeting.registration_aviable%}
-<div class="alert alert-success" role="alert">
-  {% trans 'Reservation open.'%}
-</div>
-{% elif not meeting.registration_open%}
-<div class="alert alert-danger" role="alert">
-  {% trans 'Reservation closed.'%}
-</div>
-{% else %}
-<div class="alert alert-danger" role="alert">
-  {% trans 'No more time slot aviable.'%}
-</div>
-{% endif %}
+{{meeting.pk}}
+  {% if meeting.registration_aviable%}
+    <div class="alert alert-success" role="alert">
+      {% trans 'Reservation open.'%}
+    </div>
+  {% elif not meeting.registration_open%}
+    <div class="alert alert-danger" role="alert">
+      {% trans 'Reservation closed.'%}
+    </div>
+  {% else %}
+    <div class="alert alert-danger" role="alert">
+      {% trans 'No more time slot aviable.'%}
+    </div>
+  {% endif %}
 {% endblock %}
 
 
@@ -26,12 +27,11 @@
 {% endblock %}
 
 {% block content %}
-
 <div class="mx-4">
 {% for res in reservation_list %}
 <div class="card mb-3">
   <div class="card-body">
-    <h5 class="card-title">{{res.time_slot.meeting}}</h5>
+    <h5 class="card-title">{{res.meeting}}</h5>
     <h6 class="card-subtitle mb-2 text-muted">{{res.reservation_number}}</h6>
     {% if res.is_active %}
     <a href="{% url 'pilot_update_reservation' res.pk %}" class="btn btn-warning"><span class="fas fa-pen"></span>{% trans "Edit" %}</a>
