--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -38,7 +38,7 @@
   {% endif %}
     <td>{{res.reservation_number}}</td>
     <td>{{res.time_slot}}</td>
-    <td>{{res.ulm.pilot}}</td>
+    <td>{{res.pilot}}</td>
     <td>{{res.ulm.imatriculation}}</td>
     <td>{{res.ulm.radio_id}}</td>
     <td>{{res.fuel_reservation}}</td>
