--- a/meeting/templates/pilot_reservation_list.html
+++ b/meeting/templates/pilot_reservation_list.html
@@ -35,15 +35,39 @@
     {% if res.is_active %}
     <a href="{% url 'pilot_update_reservation' res.pk %}" class="btn btn-warning"><span class="fas fa-pen"></span>{% trans "Edit" %}</a>
     <a href="{% url 'pilot_delete_reservation' res.pk %}" class="btn btn-danger"><span class="fas fa-minus-circle"></span>{% trans "Delete" %}</a>
-    <form action="{% url 'ajax_cancel_reservation' pk=res.pk %}" method=POST>
-      {% csrf_token %}
-      <button class="btn btn-danger"><span class="fas fa-minus-circle"></span>{% trans "Cancel" %}</button>
-    </form>
+    {% if not res.canceled %}
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cancelModal{{res.pk}}"><span class="fas fa-minus-circle"></span>{% trans 'Cancel Reservation'%}</button>
+        <div class="modal fade" id="cancelModal{{res.pk}}" tabindex="-1" role="dialog" aria-labelledby="cancelModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="cancelModalLabel">{% trans 'Cancel Reservation'%}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <!-- TODO put related chunk -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <form action="{% url 'ajax_cancel_reservation' pk=res.pk %}" method=POST>
+                  {% csrf_token %}
+                  <button class="btn btn-danger"><span class="fas fa-minus-circle"></span>{% trans 'Cancel Reservation'%}</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endif%}
     {% endif %}
   </div>
 </div>
 {% endfor %}
 </div>
+
+
+
 
 {% include 'pagination.html' %}
 
