--- a/meeting/templates/pilot_reservation_list.html
+++ b/meeting/templates/pilot_reservation_list.html
@@ -15,6 +15,11 @@
       {% trans 'No more time slot aviable.'%}
     </div>
   {% endif %}
+  {% if meeting.confirmation_open %}
+  <div class="alert alert-warning" role="alert">
+    {% trans 'Please confirm your reservation.'%}
+  </div>
+  {% endif %}
 {% endblock %}
 
 
@@ -33,11 +38,39 @@
     <div class="">
 
     <h5 class="card-title">{{res.meeting}}</h5>
+    {% if res.confirmed %}
     <h6 class="card-subtitle mb-2 text-muted">{{res.reservation_number}}</h6>
+    {% endif %}
     {% if res.is_active %}
     <a href="{% url 'pilot_update_reservation' res.pk %}" class="btn btn-warning"><span class="fas fa-pen"></span>{% trans "Edit" %}</a>
     {% if not res.canceled %}
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cancelModal{{res.pk}}"><span class="fas fa-minus-circle"></span>{% trans 'Cancel Reservation'%}</button>
+      {% if res.meeting.confirmation_open and not res.confirmed %}
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmModal{{res.pk}}"><span class="fas fa-check"></span>{% trans 'Confirm '%}</button>
+      <!-- Confirm modal-->
+        <div class="modal fade" id="confirmModal{{res.pk}}" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="confirmModalLabel">{% trans 'Confirm Reservation'%}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <!-- TODO put related chunk -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <form action="{% url 'ajax_confirm_reservation' pk=res.pk %}" method=POST>
+                  {% csrf_token %}
+                  <button class="btn btn-primary"><span class="fas fa-check"></span>{% trans 'Confrim'%}</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endif %}
+      <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#cancelModal{{res.pk}}"><span class="fas fa-minus-circle"></span>{% trans 'Cancel Reservation'%}</button>
       <!-- Cancel modal-->
         <div class="modal fade" id="cancelModal{{res.pk}}" tabindex="-1" role="dialog" aria-labelledby="cancelModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -64,11 +97,15 @@
       {% endif%}
     {% endif %}
     </div> <!-- End Right -->
+    <div class="">
     {% if res.canceled %}
-      <div class="">
-        <h5 class="text-danger">Canceled</h5>
-      </div>
-    {% endif %}
+        <h5 class="text-danger">{% trans 'Canceled'%}</h5>
+    {% elif res.confirmed %}
+        <h5 class="text-primary">{% trans 'Confirmed'%}</h5>
+    {% else %}
+        <h5 class="text-secondary">{% trans 'Waiting for validation'%}</h5>
+    {%endif%}
+    </div>
   </div>
 </div>
 {% endfor %}
