--- a/meeting/templates/pilot_ulm_list.html
+++ b/meeting/templates/pilot_ulm_list.html
@@ -1,5 +1,6 @@
 {% extends "base_logged.html" %}
 {% load i18n %}
+{% load countries %}
 
 {% block page_title%}
 {% trans "Your ULMs" %}
@@ -14,9 +15,20 @@
 {% for ulm in ulm_list %}
 <div class="card mb-3">
   <div class="card-body">
+    <!-- TODO add Ulm summary -->
     <h5 class="card-title">{{ulm.constructor}} - {{ulm.model}}</h5>
     <h6 class="card-subtitle mb-2 text-muted">{{ulm.radio_id}}</h6>
-    <a href="#" class="btn btn-primary"><span class="fas fa-info-circle"></span>{% trans "Detail" %}</a>
+    <div class="row mb-2">
+      <div class="col-sm">
+        <span class="">{% trans 'Imatriculation:'%} {{ulm.imatriculation}}</span>
+        <br>
+        <span>{% trans 'Type:' %} {{ulm.type}}</span>
+      </div>
+      {% get_country ulm.imatriculation_country as country %}
+      <div class="col-sm">
+        <span>{% trans 'Imatriculation Country:'%} {{country.name}}</span>
+      </div>
+    </div>
     <a href="{% url 'pilot_update_ulm' ulm.pk %}" class="btn btn-warning"><span class="fas fa-pen"></span>{% trans "Edit" %}</a>
     <a href="{% url 'pilot_delete_ulm' ulm.pk %}" class="btn btn-danger"><span class="fas fa-minus-circle"></span>{% trans "Delete" %}</a>
   </div>
