add creation and modification date

--- a/meeting/templates/pilot_ulm_list.html
+++ b/meeting/templates/pilot_ulm_list.html
@@ -15,7 +15,7 @@
 {% for ulm in ulm_list %}
 <div class="card mb-3">
   <div class="card-body">
-    <!-- TODO add Ulm summary -->
+    <!-- TODO make pretty -->
     <h5 class="card-title">{{ulm.constructor}} - {{ulm.model}}</h5>
     <h6 class="card-subtitle mb-2 text-muted">{{ulm.radio_id}}</h6>
     <div class="row mb-2">
