start palying with wizard form

--- a/templates/base/base_logged_form.html
+++ b/templates/base/base_logged_form.html
@@ -22,10 +22,15 @@
 {% endif %}
 
 <div class="container">
+  <form method="post">
+    {% csrf_token %}
+  {% block form %}
   {% crispy form %}
-
+  {% endblock %}
+  </form>
 </div>
 
 {%  block afterform %}
 {% endblock %}
+
 {% endblock %}
