fix formset rendering (add missing id field)

--- a/templates/base/base_logged_form.html
+++ b/templates/base/base_logged_form.html
@@ -29,17 +29,7 @@
     {% crispy form %}
   {% elif formset %}
     {{ formset.management_form|crispy }}
-    {% for form in formset %}
-    <div class="">
-      {{ form.management_form|crispy }}
-      {% if helper %}
-        {% crispy form helper %}
-      {% else %}
-        {% crispy form helper %}
-      {% endif %}
-    </div>
-
-    {% endfor %}
+    {% crispy formset helper %}
   {% endif %}
       <button type="submit" class="btn btn-primary">{% trans 'Submit'%}</button>
   {% endblock %}
