--- a/meeting/templates/pilot_reservation_list.html
+++ b/meeting/templates/pilot_reservation_list.html
@@ -15,7 +15,7 @@
       {% trans 'No more time slot aviable.'%}
     </div>
   {% endif %}
-  {% if meeting.confirmation_open %}
+  {% if meeting.confirmation_open and user.pilot.as_unconfirmed_reservation %}
   <div class="alert alert-warning" role="alert">
     {% trans 'Please confirm your reservation.'%}
   </div>
@@ -25,9 +25,11 @@
 
 {% block page_title%}
   {% trans "Your Reservations" %}
+  {% if user.pilot.can_make_reservation %}
   <a class="btn btn-success" role="button" href="{% url 'pilot_create_reservation' %}">
     <span class="fas fa-plus-circle"></span>{% trans "Add New" %}
   </a>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
