--- a/templates/base/base_logged.html
+++ b/templates/base/base_logged.html
@@ -45,7 +45,7 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
-
+          {% include 'alert_messages.html'%}
           {% block messages %}
 
           {% endblock%}
