--- a/templates/base/base_logged_form.html
+++ b/templates/base/base_logged_form.html
@@ -30,7 +30,7 @@
   {% elif formset %}
     {{ formset.management_form|crispy }}
     {% crispy formset helper %}
-      <button type="submit" class="btn btn-primary">{% trans 'Submit'%}</button>
+      <!-- <button type="submit" class="btn btn-primary">{% trans 'Submit'%}</button> -->
     {% endif %}
 
   {% endblock %}
