--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -30,9 +30,9 @@
           </a>
           <!-- Dropdown - User Information -->
           <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-            <a class="dropdown-item" href="{% url 'pilot' user.pilot.pk%}">
+            <a class="dropdown-item" href="{% url 'logged_index'%}">
               <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-              {% trans "Profile" %}
+              {% trans "My Account" %}
             </a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'logout'%}">
