--- a/templates/emails/includes/base/text_row_with_title.html
+++ b/templates/emails/includes/base/text_row_with_title.html
@@ -30,7 +30,7 @@
                             </h3>
                             <div mc:edit="body" style="text-align:left;font-family:Helvetica,Arial,sans-serif;font-size:15px;margin-bottom:0;color:{{textcolor}};line-height:135%;">
                               {% block content %}
-                              {{text}}
+                              {{text | safe}}
                               {% endblock %}
                             </div>
                           </td>
