--- a/templates/emails/includes/base/button_row.html
+++ b/templates/emails/includes/base/button_row.html
@@ -1,4 +1,4 @@
-{% with bgcolor=bgcolor|default:"#3498DB" textcolor=textcolor|default:"#FFFFFF" link=link|default:"#" text=text|default:"link"%}
+{% with bgcolor=bgcolor|default:"#3498DB" textcolor=textcolor|default:"#FFFFFF" link=link|default:"#" text=text|default:"link" width=width|default:"800"%}
 
 <tr>
   <td align="center" valign="top">
@@ -7,9 +7,9 @@
       <tr style="padding-top:0;">
         <td align="center" valign="top">
           <!-- FLEXIBLE CONTAINER // -->
-          <table border="0" cellpadding="30" cellspacing="0" width="500" class="flexibleContainer">
+          <table border="0" cellpadding="30" cellspacing="0" width={{width}} class="flexibleContainer">
             <tr>
-              <td style="padding-top:0;" align="center" valign="top" width="500" class="flexibleContainerCell">
+              <td style="padding-top:0;" align="center" valign="top" width={{width}} class="flexibleContainerCell">
 
                 <!-- CONTENT TABLE // -->
                 <table border="0" cellpadding="0" cellspacing="0" width="50%" class="emailButton" style="background-color: {{bgcolor}};">
