--- a/templates/emails/includes/base/divider_row.html
+++ b/templates/emails/includes/base/divider_row.html
@@ -1,4 +1,4 @@
-{% with color=color|default:"#C8C8C8"%}
+{% with color=color|default:"#C8C8C8" width=width|default:"800"%}
 
 <!-- MODULE DIVIDER // -->
 <tr>
@@ -8,9 +8,9 @@
       <tr>
         <td align="center" valign="top">
           <!-- FLEXIBLE CONTAINER // -->
-          <table border="0" cellpadding="0" cellspacing="0" width="500" class="flexibleContainer">
+          <table border="0" cellpadding="0" cellspacing="0" width={{width}} class="flexibleContainer">
             <tr>
-              <td align="center" valign="top" width="500" class="flexibleContainerCell">
+              <td align="center" valign="top" width={{width}} class="flexibleContainerCell">
                 <table class="flexibleContainerCellDivider" border="0" cellpadding="30" cellspacing="0" width="100%">
                   <tr>
                     <td align="center" valign="top" style="padding-top:0px;padding-bottom:0px;">
