--- a/templates/emails/includes/base/footer_row.html
+++ b/templates/emails/includes/base/footer_row.html
@@ -1,4 +1,4 @@
-{% with bgcolor=bgcolor|default:"#E1E1E1" %}
+{% with bgcolor=bgcolor|default:"#E1E1E1" width=width|default:"800" %}
 
 <!-- EMAIL FOOTER ROW // -->
 <!--
@@ -6,7 +6,7 @@
   Its width can be set to 100% for a color band
   that spans the width of the page.
 -->
-<table bgcolor={{bgcolor}} border="0" cellpadding="0" cellspacing="0" width="500" id="emailFooter">
+<table bgcolor={{bgcolor}} border="0" cellpadding="0" cellspacing="0" width={{width}} id="emailFooter">
 
   <!-- FOOTER ROW // -->
   <!--
@@ -21,9 +21,9 @@
         <tr>
           <td align="center" valign="top">
             <!-- FLEXIBLE CONTAINER // -->
-            <table border="0" cellpadding="0" cellspacing="0" width="500" class="flexibleContainer">
+            <table border="0" cellpadding="0" cellspacing="0" width={{width}} class="flexibleContainer">
               <tr>
-                <td align="center" valign="top" width="500" class="flexibleContainerCell">
+                <td align="center" valign="top" width={{width}} class="flexibleContainerCell">
                   <table border="0" cellpadding="30" cellspacing="0" width="100%">
                     <tr>
                       <td valign="top" bgcolor={{bgcolor}}>
