--- a/templates/emails/includes/base/header_row.html
+++ b/templates/emails/includes/base/header_row.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% with bgcolor=bgcolor|default:"#E1E1E1" textcolor=textcolor|default:"#828282" text=text|default:""%}
+{% with bgcolor=bgcolor|default:"#E1E1E1" textcolor=textcolor|default:"#828282" text=text|default:"" width=width|default:"800"%}
 
 <!-- EMAIL HEADER // -->
 <!--
@@ -7,7 +7,7 @@
   Its width can be set to 100% for a color band
   that spans the width of the page.
 -->
-<table bgcolor="{{bgcolor}}" border="0" cellpadding="0" cellspacing="0" width="500" id="emailHeader">
+<table bgcolor="{{bgcolor}}" border="0" cellpadding="0" cellspacing="0" width={{width}} id="emailHeader">
 
   <!-- HEADER ROW // view in browser-->
   <tr>
@@ -17,9 +17,9 @@
         <tr>
           <td align="center" valign="top">
             <!-- FLEXIBLE CONTAINER // -->
-            <table border="0" cellpadding="10" cellspacing="0" width="500" class="flexibleContainer">
+            <table border="0" cellpadding="10" cellspacing="0" width={{width}} class="flexibleContainer">
               <tr>
-                <td valign="top" width="500" class="flexibleContainerCell">
+                <td valign="top" width={{width}} class="flexibleContainerCell">
 
                   <!-- CONTENT TABLE // -->
                   <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
