--- a/templates/emails/includes/base/html_head.html
+++ b/templates/emails/includes/base/html_head.html
@@ -3,13 +3,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="format-detection" content="telephone=no" /> <!-- disable auto telephone linking in iOS -->
-  <title>Respmail is a response HTML email designed to work on all major email platforms and smartphones</title>
+  <title>Salon ULM de Blois</title>
   <style type="text/css">
     /* RESET STYLES */
     html { background-color:#E1E1E1; margin:0; padding:0; }
     body, #bodyTable, #bodyCell, #bodyCell{height:100% !important; margin:0; padding:0; width:100% !important;font-family:Helvetica, Arial, "Lucida Grande", sans-serif;}
     table{border-collapse:collapse;}
-    table[id=bodyTable] {width:100%!important;margin:auto;max-width:500px!important;color:#7A7A7A;font-weight:normal;}
+    table[id=bodyTable] {width:100%!important;margin:auto;max-width:1000px!important;color:#7A7A7A;font-weight:normal;}
     img, a img{border:0; outline:none; text-decoration:none;height:auto; line-height:100%;}
     a {text-decoration:none !important;border-bottom: 1px solid;}
     h1, h2, h3, h4, h5, h6{color:#5F5F5F; font-weight:normal; font-family:Helvetica; font-size:20px; line-height:125%; text-align:Left; letter-spacing:normal;margin-top:0;margin-right:0;margin-bottom:10px;margin-left:0;padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;}
@@ -61,7 +61,7 @@
 
 
     /* MOBILE STYLES */
-    @media only screen and (max-width: 480px){
+    @media only screen and (max-width: 1000px){
       /*////// CLIENT-SPECIFIC STYLES //////*/
       body{width:100% !important; min-width:100% !important;} /* Force iOS Mail to render the email at full width. */
 
