--- a/templates/emails/includes/base/text_row_with_title.html
+++ b/templates/emails/includes/base/text_row_with_title.html
@@ -1,4 +1,4 @@
-{% with textcolor=textcolor|default:"#5F5F5F" bgcolor=bgcolor|default:"#FFFFFF" title=title|default:"" text=text|default:""%}
+{% with textcolor=textcolor|default:"#5F5F5F" bgcolor=bgcolor|default:"#FFFFFF" title=title|default:"" text=text|default:"" width=width|default:"800"%}
 
 <tr>
   <td align="center" valign="top">
@@ -7,9 +7,9 @@
       <tr>
         <td align="center" valign="top">
           <!-- FLEXIBLE CONTAINER // -->
-          <table border="0" cellpadding="0" cellspacing="0" width="500" class="flexibleContainer">
+          <table border="0" cellpadding="0" cellspacing="0" width={{width}} class="flexibleContainer">
             <tr>
-              <td align="center" valign="top" width="500" class="flexibleContainerCell">
+              <td align="center" valign="top" width={{width}} class="flexibleContainerCell">
                 <table border="0" cellpadding="30" cellspacing="0" width="100%">
                   <tr>
                     <td align="center" valign="top">
