--- a/templates/emails/reservation_confirmation_request.html
+++ b/templates/emails/reservation_confirmation_request.html
@@ -15,6 +15,8 @@
 
 {% include 'emails/includes/base/divider_row.html'%}
 
-{% include 'emails/includes/base/text_row_with_title.html' with text="text text text"%}
+{% get_chunk 'email_res_confirm_body_2' as body_2 %}
+
+{% include 'emails/includes/base/text_row_with_title.html' with text=body_2.content%}
 
 {% endblock %}
